fix z-index bug

--- a/src/components/Banner/banner.module.scss
+++ b/src/components/Banner/banner.module.scss
@@ -52,7 +52,7 @@ section.bannerComponent {
     border: none;
     cursor: pointer;
 
-    z-index: 99;
+    z-index: 1;
 
     transition: all ease 200ms;
 
