--- a/src/components/CvButton/cv.module.scss
+++ b/src/components/CvButton/cv.module.scss
@@ -13,6 +13,7 @@ section.cvComponent {
 
     background: var(--white);
     border: 2px solid var(--black);
+    border-radius: 3px;
     font-size: 18px;
     font-weight: 500;
     text-transform: uppercase;
@@ -23,6 +24,8 @@ section.cvComponent {
 
     cursor: pointer;
     transition: all ease 200ms;
+
+    z-index: 2;
 
     &:hover {
       background: var(--primary);
